tests/functional/lang/eval-fail-concatLists-1.err.exp
error:
       … while calling the 'concatLists' builtin
         at /pwd/lang/eval-fail-concatLists-1.nix:1:1:
            1| builtins.concatLists 1
             | ^
            2|

       … while evaluating the first argument passed to builtins.concatLists

       error: expected a list but found an integer: 1
